tests/fails/nilsym.t
terra foo()
	var [what] : int = 4
end